Fixed message spacing and added hover effect

--- a/client/src/components/Message.css
+++ b/client/src/components/Message.css
@@ -6,8 +6,15 @@
     right: 0;
     bottom: 110px;
     overflow: auto;
-    margin-left: 60px;
+}
+
+.individual-message:hover {
+    background-color: #e7e7e7;
+}
+
+.individual-message {
     padding-right: 60px;
+    padding-left: 60px;
 }
 
 .sender-name {
@@ -22,12 +29,14 @@
 }
 
 .message-content {
-    margin-top: 0;
+    margin: 0;
     font-size: 16px;
+    padding: 4px;
 }
 
 .name-time {
     margin-bottom: 0;
+    padding-top: 10px;
 }
 
 .date-separator {
